--- a/src/app/pregunta/pregunta-editar.component.html
+++ b/src/app/pregunta/pregunta-editar.component.html
@@ -7,13 +7,13 @@
     <div >
       <form
             novalidate
-            (ngSubmit)="saveProduct()"
+            (ngSubmit)="savePregunta()"
             [formGroup]="preguntaForm">
 
 
         <fieldset>
           <div class="form-group row"
-               [ngClass]="{'has-danger': displayMessage.descripcionPregunta }">
+               [ngClass]="{'has-danger': displayMessage.descripcionng}">
             <label class="col-md-2 control-label" for="descripcionPreguntaId">Descripción</label>
 
             <div class="col-md-6">
@@ -21,9 +21,9 @@
                        id="descripcionPreguntaId"
                        placeholder="Descripcion"
                        rows=3
-                       formControlName="descripcionPregunta"></textarea>
-              <span class="help-block" *ngIf="displayMessage.descripcionPregunta">
-                                {{displayMessage.descripcionPregunta}}
+                       formControlName="descripcion"></textarea>
+              <span class="help-block" *ngIf="displayMessage.descripcion">
+                                {{displayMessage.descripcion}}
                         </span>
             </div>
           </div>
@@ -53,7 +53,7 @@
                      id="tipoPreguntafId"
                      type="text"
                      placeholder="Tipo de pregunta"
-                     formControlName="tipoPregunta"/>
+                     formControlName="tipoPregun"/>
               <span class="form-control-feedback" *ngIf="displayMessage.tipoPregunta">
                                 {{displayMessage.tipoPregunta}}
                         </span>
@@ -68,7 +68,7 @@
                      id="grupoPreguntafId"
                      type="text"
                      placeholder="Grupo de pregunta"
-                     formControlName="grupoPregunta"/>
+                     formControlName="grupoPregun"/>
               <span class="help-block" *ngIf="displayMessage.grupoPregunta">
                                 {{displayMessage.grupoPregunta}}
                         </span>
@@ -98,15 +98,6 @@
                      formControlName="texto"/>
             </div>
           </div>
-          <div class="form-group row has-danger">
-            <label for="inputHorizontalDnger" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control form-control-danger" id="inputHorizontalDnger" placeholder="name@example.com">
-              <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
-              <small class="form-text text-muted">Example help text that remains unchanged.</small>
-            </div>
-          </div>
-
           <div class="form-group row">
             <div class="col-md-4 col-md-offset-2">
                         <span>
@@ -127,7 +118,7 @@
               <span>
                             <a class="btn btn-default"
                                style="width:80px"
-                               (click)="deleteProduct()">
+                               (click)="deletePregunta()">
                                 Delete
                             </a>
                         </span>
@@ -135,34 +126,6 @@
           </div>
         </fieldset>
       </form>
-      <div class="container">
-        <form>
-          <div class="form-group row has-success">
-            <label for="inputHorizontalSuccess" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control form-control-success" id="inputHorizontalSuccess" placeholder="name@example.com">
-              <div class="form-control-feedback">Success! You've done it.</div>
-              <small class="form-text text-muted">Example help text that remains unchanged.</small>
-            </div>
-          </div>
-          <div class="form-group row has-warning">
-            <label for="inputHorizontalWarning" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control form-control-warning" id="inputHorizontalWarning" placeholder="name@example.com">
-              <div class="form-control-feedback">Shucks, check the formatting of that and try again.</div>
-              <small class="form-text text-muted">Example help text that remains unchanged.</small>
-            </div>
-          </div>
-          <div class="form-group row has-danger">
-            <label for="inputHorizontalDnger" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control form-control-danger" id="inputHorizontalDnger" placeholder="name@example.com">
-              <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
-              <small class="form-text text-muted">Example help text that remains unchanged.</small>
-            </div>
-          </div>
-        </form>
-      </div>
       <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
     </div>
 
