--- a/src/app/pregunta/pregunta-editar.component.html
+++ b/src/app/pregunta/pregunta-editar.component.html
@@ -65,6 +65,12 @@
           <div *ngIf="textoLargo">
             <p>Texto largo</p>
           </div>
+          <div *ngIf="dicotomica">
+            <p>Dicotomica</p>
+          </div>
+          <div *ngIf="seleccionMultiple">
+            <p>Seleccion multiple</p>
+          </div>
 
           <div class="form-group row" [ngClass]="{'has-error': displayMessage.grupoPregunta}">
             <label class="col-md-2 control-label" for="grupoPreguntafId">Grupo de pregunta</label>
