--- a/src/app/tipo-pregunta/tipo-pregunta-editar.component.html
+++ b/src/app/tipo-pregunta/tipo-pregunta-editar.component.html
@@ -56,7 +56,7 @@
           </div>
         </fieldset>
       </form>
-      <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
+      <!--<div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>-->
     </div>
 
   </div>
