--- a/src/app/grupo-pregunta/grupo-pregunta-lista.component.html
+++ b/src/app/grupo-pregunta/grupo-pregunta-lista.component.html
@@ -1,7 +1,7 @@
 <div class='blog-main'>
   <div class="sidebar-module sidebar-module-inset">
     <h4>
-      {{pageTitle}}
+     {{ pageTitle }}}
     </h4>
     <br>
 
@@ -13,7 +13,7 @@
     </div>
     <div class='row' *ngIf='filtroGrupoPregunta'>
       <div class='col-md-6'>
-        <h3>Buscar: {{filtroGrupoPregunta}} </h3>
+        <h3>Buscar: {{ filtroGrupoPregunta }} </h3>
       </div>
     </div>
     <div class="row">
@@ -21,14 +21,13 @@
 
       </div>
       <div class="col-md-0">
-        <a class="btn btn-primary btn-sm"
-           [routerLink]="['/grupoPreguntaEditar/0']">
+        <a class="btn btn-primary btn-sm" (click)="ver(prueba)">
           Agregar
         </a>
       </div>
     </div>
 
-    <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
+    <div class='has-error' *ngIf='errorMessage'>{{ errorMessage }}</div>
 
     <div class='row'>
       <table class='table table-sm table-striped' style='margin-top: 2%;'
@@ -41,7 +40,7 @@
         <tbody>
         <tr *ngFor='let grup of grupoPreguntas'>
           <td><a [routerLink]="['/grupo', grup.grupoPreguntaId]">
-            {{grup.descripcion}}
+           {{ grup.descripcion }}}
           </a>
           </td>
           <td style="text-align: right;">
@@ -56,3 +55,14 @@
     </div>
   </div>
 </div>
+<ng-template #prueba>
+  <div class="modal-header">
+    <h4 class="modal-title">Esto es una prueba</h4>
+  </div>
+  <div class="modal-body">
+    <div>Id:</div>
+  </div>
+  <div class="modal-footer">
+
+  </div>
+</ng-template>
