Funcionalidad para actualizar respuestas

--- a/src/app/pregunta/pregunta-editar.component.html
+++ b/src/app/pregunta/pregunta-editar.component.html
@@ -118,7 +118,7 @@
                          id="{{'opcion1Id' + i}}"
                          formControlName="descripcion"/>
                   <input class="checkbox_opcion" attr.type="{{tipoInput}}" (change)="assignClave(respuesta.controls.id.value)"
-                         id="{{'clave1Id' + i}}" formControlName="clave" name="clave"/>
+                         id="{{'clave1Id' + i}}" formControlName="clave" name="clave" [checked]="respuesta.controls.clave.value"/>
                   <label class="col-md-2 control-label form-control-sm" attr.for="{{'clave1Id' + i}}">Correcta</label>
                   <button class="btn btn-danger btn-sm" (click)="eliminarOpcion(i)">X</button>
                 </div>
